--- a/index.html
+++ b/index.html
@@ -4,55 +4,75 @@
     <meta charset="utf-8">
     <title>Mihir Gupta</title>
     <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index.css">
   </head>
 
   <body>
+    <header>
+      <div class="first-name">
+        <p>Mihir</p>
+      </div>
 
-    <div class="first-name">
-      <p>Mihir</p>
-    </div>
+      <div class="last-name">
+        <p>Gupta</p>
+      </div>
 
-    <div class="last-name">
-      <p>Gupta</p>
-    </div>
-
-    <div class="profile-image">
-    </div>
+      <div class="profile-image">
+      </div>
 
 
-    <div class="navigation-bar">
-      <ul>
-        <li>
-          <a href="#about">
-            <u>About</u>
-          </a>
-        </li>
-        <li>
-          <a href="#projects">
-            <u>Projects</u>
-          </a>
-        </li>
-        <li>
-          <a href="#blog">
-            <u>Blog</u>
-          </a>
-        </li>
-        <li>
-          <a href="#contact">
-            <u>Contact</u>
-          </a>
-        </li>
-      </ul>
-    </div>
+      <div class="navigation-bar">
+        <ul>
+          <li>
+            <a href="index.html">
+              <u>About</u>
+            </a>
+          </li>
+          <li>
+            <a href="projects.html">
+              <u>Projects</u>
+            </a>
+          </li>
+          <li>
+            <a href="blog.html">
+              <u>Blog</u>
+            </a>
+          </li>
+          <li>
+            <a href="contact.html">
+              <u>Contact</u>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </header>
 
-    <div class="page-title">
+    <h1>
       <p>About Me</p>
-    </div>
+    </h1>
 
     <div class="text">
-      <p>Hi! I'm Mihir, a Computer Engineering Student at the University of Waterloo.</p>
+      <p>Hi! I'm Mihir, a <mark>Computer Engineering Student</mark> at the <mark>University of Waterloo</mark>.</p>
+      <p>I'm an aspiring Software/Machine Learning Engineer who is passionate about</p>
+      <p>learning, creating projects, and meeting new people. My goal is to build</p>
+      <p>technologies that benefit humankind. In particular, I hope to collaborate on</p>
+      <p>projects that focus on educational technology,  machine learning/articial</p>
+      <p>intelligence, or computer networks/security.</p>
+      <br>
+      <p>If you would like to know more about me and my experiences, you can find my</p>
+      <p>
+        resume
+        <a href="#resume">
+          <u>here</u>
+        </a>
+      </p>
     </div>
 
+    <div class="form">
+      <form>
+        <label for="fname">First Name:</label><br>
+        <input type="text" id="fname" name"fname"><br>
+      </form>
+    </div>
   </body>
 </html>
