completed project.html. Work on blog and contact html files.

--- a/projects.html
+++ b/projects.html
@@ -1,52 +1,110 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Projects | Mihir Gupta</title>
-    <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
-    <link rel="stylesheet" href="projects.css">
-  </head>
+<head>
+  <meta charset="utf-8">
+  <title>Projects | Mihir Gupta</title>
+  <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
+  <link rel="stylesheet" href="projects.css">
+</head>
 
-  <body>
-    <header>
-      <div class="first-name">
-        <p>Mihir</p>
-      </div>
+<body>
+  <header>
+    <div class="first-name">
+      <p>Mihir</p>
+    </div>
 
-      <div class="last-name">
-        <p>Gupta</p>
-      </div>
+    <div class="last-name">
+      <p>Gupta</p>
+    </div>
 
-      <div class="list-item-name">
-        <p>Projects</p>
-      </div>
+    <div class="divider">
+      <p>|</p>
+    </div>
 
-      <div class="navigation-bar">
-        <ul>
-          <li>
-            <a href="index.html">
-              <u>About</u>
+    <div class="list-item-name">
+      <p>Projects</p>
+    </div>
+
+    <div class="navigation-bar">
+      <ul>
+        <li>
+          <a href="index.html">
+            <u>About</u>
+          </a>
+        </li>
+        <li>
+          <a href="projects.html">
+            <u>Projects</u>
+          </a>
+        </li>
+        <li>
+          <a href="blog.html">
+            <u>Blog</u>
+          </a>
+        </li>
+        <li>
+          <a href="contact.html">
+            <u>Contact</u>
+          </a>
+        </li>
+      </ul>
+    </div>
+  </header>
+
+  <h1>
+    <p>My Projects</p>
+  </h1>
+
+  <div class="text">
+    <p>Below are the following projects I have created in my spare time.</p>
+    <p>Click on a project title to learn more about what I did!</p>
+    <br>
+  </div>
+
+  <table>
+    <tr>
+      <th>
+        <div class="project-box">
+          <div class="image-box">
+          </div>
+
+          <div class="project-title">
+            <a href="https://github.com/mgupta27/Sorting-Algorithm-Duration">
+              Sorting Algorithm Duration
             </a>
-          </li>
-          <li>
-            <a href="projects.html">
-              <u>Projects</u>
-            </a>
-          </li>
-          <li>
-            <a href="blog.html">
-              <u>Blog</u>
-            </a>
-          </li>
-          <li>
-            <a href="contact.html">
-              <u>Contact</u>
-            </a>
-          </li>
-        </ul>
-      </div>
+          </div>
 
-    </header>
+          <br>
 
-  </body>
+          <div class="project-heading">
+            <b>TOOLS</b>
+          </div>
+
+          <div class="project-text">
+            <p>Java | Java Swing | Java AWT Event Listeners
+               | Eclipse IDE</p>
+          </div>
+
+          <div class="project-heading">
+            <b>DESCRIPTION</b>
+          </div>
+
+          <div class="project-text">
+            <p>
+               Programmed a Java Swing application to test
+               which sorting algorithm (Bubble Sort, Inser
+               tion Sort, Partition Sort, and Selection
+               sort) is the most efficient. Utilized multi-
+               threading and Object-Oriented Programming
+               to run the sorting algorithms concurrentley.
+             </p>
+          </div>
+
+        </div>
+      </th>
+    </tr>
+  </table>
+
+
+</body>
 </html>
