--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
       </p>
     </div>
 
-    <div class="form">
+    <!-- <div class="form">
       <form>
         <label for="fname">First Name:</label><br>
         <input type="text" id="fname" name"fname"><br>
       </form>
-    </div>
+    </div> -->
   </body>
 </html>
