Continue to work on blog and finish contact.html

--- a/hello_world.html
+++ b/hello_world.html
@@ -51,24 +51,15 @@
     </div>
   </header>
 
-  <h1>
-    <p>Welcome to my blog!</p>
-  </h1>
+  <div class="blog-title">
+    <p>Hello World!</p>
+  </div>
+  
+  <br>
 
-  <table>
-    <th>
-      <div class="blog-box">
-        <div class="blog-heading">
-          <a href="hello_world.html">
-            Hello World!
-          </a>
+  <div class="blog-text">
+    <p>Happy New Year!</p>
+  </div>
 
-          <div class="blog-date">
-            Jan 1st, 2022
-          </div>
-        </div>
-      </div>
-    </th>
-  </table>
 </body>
 </html>
