--- a/projects.html
+++ b/projects.html
@@ -94,7 +94,7 @@
                Programmed a Java Swing application to test
                which sorting algorithm (Bubble Sort, Inser
                tion Sort, Partition Sort, and Selection
-               sort) is the most efficient. Utilized multi-
+               sort) is the most efficient. Utilized multi
                threading and Object-Oriented Programming
                to run the sorting algorithms concurrentley.
              </p>
