Finished all pages. Need to review, edit and add more things.

--- a/blog.html
+++ b/blog.html
@@ -68,6 +68,8 @@
           </div>
         </div>
       </div>
+
+      <!-- <hr size="2" width="550px" color="grey"> -->
     </th>
   </table>
 </body>
