--- a/hello_world.html
+++ b/hello_world.html
@@ -51,14 +51,45 @@
     </div>
   </header>
 
-  <div class="blog-title">
+  <div class="blog-title-2">
     <p>Hello World!</p>
   </div>
-  
-  <br>
+
+  <div class="blog-date-2">
+    <p><b>January 1st, 2022</b></p>
+  </div>
+
+  <p></p>
 
   <div class="blog-text">
-    <p>Happy New Year!</p>
+    <p>Happy New Year 2022!</p>
+
+    <img align="middle" src="images/happy_new_year.gif" alt="Happy-New-year">
+
+    <p></p>
+    <br>
+    <p>Welcome to my first blog post. My name is Mihir Gupta and I'm a first year</p>
+    <p>Computer Engineering student in stream 4 at the University of Waterloo.</p>
+    <br>
+    <p>My goal for this blog is to write about my experiences as a UWaterloo student</p>
+    <p>and new technologies that I have learnt in my future ECE courses or in my</p>
+    <p>spare time. Some things I plan to learn during my first coop term and over the</p>
+    <p>Winter Break are Android Development, JavaScript and the React Framework, and</p>
+    <p>Tensorflow.</p>
+    <br>
+    <p>I would also like to take the time to pursue my other hobbies, such as photography,</p>
+    <p>and hiking. I also want to take some time to relax and take care of my mental health</p>
+    <p>after a stressful online 1A term.</p>
+    <br>
+    <p>To end off this blog post, I would like to share a joke that made me smile.</p>
+    <br>
+    <p><i>A group of engineering professors were invited to fly in a plane. Right after they</i></p>
+    <p><i>were comforable seated, they were informed the plane was built by there students.</i></p>
+    <p><i>All but one got off their seats and headed frantically to the exits in maniacal</i></p>
+    <p><i>panic. The one lone professor that stayed sitting calmly in his seat was asked
+    <p><i>"Why did you stay put?". He replied "I have plenty of confidence in my students.</i></p>
+    <p><i>Knowing them, I can assure you this plane will never event start."</i></p>
+    <br></br>
   </div>
 
 </body>
