--- a/projects.html
+++ b/projects.html
@@ -65,8 +65,7 @@
     <tr>
       <th>
         <div class="project-box">
-          <div class="image-box">
-          </div>
+          <img src="images/Sorting-Algorithm-Duration-v6.jpg" alt="Sorting-Algorithm-Application">
 
           <div class="project-title">
             <a href="https://github.com/mgupta27/Sorting-Algorithm-Duration">
